git-annex (0.20) UNRELEASED; urgency=low

  * Preserve specified file ordering when instructed to act on multiple
    files or directories.

 -- Joey Hess <joeyh@debian.org>  Mon, 31 Jan 2011 20:06:02 -0400

git-annex (0.19) unstable; urgency=low

  * configure: Support using the uuidgen command if the uuid command is
    not available.
  * Allow --exclude to be specified more than once.
  * There are now three levels of repository trust.
  * untrust: Now marks the current repository as untrusted.
  * semitrust: Now restores the default trust level. (What untrust used to do.)
  * fsck, drop: Take untrusted repositories into account.
  * Bugfix: Files were copied from trusted remotes first even if their
    annex.cost was higher than other remotes.
  * Improved temp file handling. Transfers of content can now be resumed
    from temp files later; the resume does not have to be the immediate
    next git-annex run.
  * unused: Include partially transferred content in the list.
  * Bugfix: Running a second git-annex while a first has a transfer in
    progress no longer deletes the first processes's temp file.

 -- Joey Hess <joeyh@debian.org>  Fri, 28 Jan 2011 14:31:37 -0400

git-annex (0.18) unstable; urgency=low

  * Bugfix: `copy --to` and `move --to` forgot to stage location log changes
    after transferring the file to the remote repository.
    (Did not affect ssh remotes.)
  * fsck: Fix bug in moving of corrupted files to .git/annex/bad/
  * migrate: Fix support for --backend option.
  * unlock: Fix behavior when file content is not present.
  * Test suite improvements. Current top-level test coverage: 80%

 -- Joey Hess <joeyh@debian.org>  Fri, 14 Jan 2011 14:17:44 -0400

git-annex (0.17) unstable; urgency=low

  * unannex: Now skips files whose content is not present, rather than
    it being an error.
  * New migrate subcommand can be used to switch files to using a different
    backend, safely and with no duplication of content.