@@ -1,7 +1,8 @@
 git-annex (0.20) UNRELEASED; urgency=low
 
   * Preserve specified file ordering when instructed to act on multiple
-    files or directories.
+    files or directories. For example, "git annex get a b" will now always
+    get "a" before "b". Previously it could operate in either order.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 31 Jan 2011 20:06:02 -0400
 
